--- a/TimeSeries_Stockprice.ipynb
+++ b/TimeSeries_Stockprice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOloHwUJb3T+iYQ0JARzOyE",
+      "authorship_tag": "ABX9TyMTUuvwcKm82Rl8dWTLsCYc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -518,9 +518,92 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YblfwyFr00pX",
+        "outputId": "b48e4f35-e5c0-4f4f-af59-e90d245aed7e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "MultiIndex([( 'Close', 'HCLTECH.NS'),\n",
+              "            (  'High', 'HCLTECH.NS'),\n",
+              "            (   'Low', 'HCLTECH.NS'),\n",
+              "            (  'Open', 'HCLTECH.NS'),\n",
+              "            ('Volume', 'HCLTECH.NS')],\n",
+              "           names=['Price', 'Ticker'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in df.columns:\n",
+        "  print(i[0])\n",
+        "\n",
+        "[i[0] for i in df.columns]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X0KVg9EN0_Mf",
+        "outputId": "ffc0fbfa-8ada-4d27-d18c-0075d860d1f2"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Close\n",
+            "High\n",
+            "Low\n",
+            "Open\n",
+            "Volume\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Close', 'High', 'Low', 'Open', 'Volume']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1 = df.copy()\n",
+        "df1.columns = [i[0] for i in df1.columns]"
+      ],
+      "metadata": {
+        "id": "hZxj7nq01H8O"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YblfwyFr00pX"
+        "id": "S6zoTeu91MQG"
       },
       "execution_count": null,
       "outputs": []
